test/expressions/noinit/namingConflict.good
namingConflict.chpl:1: error: syntax error near 'noinit'
namingConflict.chpl:2: error: syntax error near 'noinit'
